// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinimalFooter renders a blc-au footer 1`] = `
<div
  className="w-full flex flex-col items-center gap-2 px-2 pb-6 md:max-w-full md:px-4 lg:px-[56px] lg:flex-row lg:justify-between lg:items-center bg-colour-surface dark:bg-colour-surface-dark"
>
  <div
    className="w-fit border-t-[1px] border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark flex flex-col lg:flex-row lg:justify-between items-center w-full"
  >
    <p
      aria-label="Copyright Information"
      className="mt-4 text-center text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light leading-7 tracking-tight whitespace-nowrap max-w-full"
      role="contentinfo"
    >
      ©Blue Light Card 2008 - 2024
    </p>
    <div
      className="grid grid-cols-2 justify-items-center w-full text-center md:grid-cols-none md:grid-rows-none md:flex md:flex-row md:justify-center lg:justify-end  md:gap-4"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.com.au/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Candidate Privacy Notice footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.com.au/candidate-privacy-notice.php"
        id="Candidate Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Candidate Privacy Notice
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.com.au/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.com.au/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`MinimalFooter renders a dds-uk footer 1`] = `
<div
  className="w-full flex flex-col items-center gap-2 px-2 pb-6 md:max-w-full md:px-4 lg:px-[56px] lg:flex-row lg:justify-between lg:items-center bg-colour-surface dark:bg-colour-surface-dark"
>
  <div
    className="w-fit border-t-[1px] border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark flex flex-col lg:flex-row lg:justify-between items-center w-full"
  >
    <p
      aria-label="Copyright Information"
      className="mt-4 text-center text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light leading-7 tracking-tight whitespace-nowrap max-w-full"
      role="contentinfo"
    >
      <span
        className="block"
      >
        © Defence Discount Service 2012 - 2024
      </span>
      <span
        className="block"
      >
        Operated by Blue Light Card Ltd
      </span>
    </p>
    <div
      className="grid grid-cols-2 justify-items-center w-full text-center md:grid-cols-none md:grid-rows-none md:flex md:flex-row md:justify-center lg:justify-end  md:gap-4"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.defencediscountservice.co.uk/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Legal and Regulatory footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.defencediscountservice.co.uk/legal-and-regulatory.php"
        id="Legal and Regulatory-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Legal and Regulatory
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.defencediscountservice.co.uk/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.defencediscountservice.co.uk/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`MinimalFooter snapshot Test renders a blc-uk footer 1`] = `
<div
  className="w-full flex flex-col items-center gap-2 px-2 pb-6 md:max-w-full md:px-4 lg:px-[56px] lg:flex-row lg:justify-between lg:items-center bg-colour-surface dark:bg-colour-surface-dark"
>
  <div
    className="w-fit border-t-[1px] border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark flex flex-col lg:flex-row lg:justify-between items-center w-full"
  >
    <p
      aria-label="Copyright Information"
      className="mt-4 text-center text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light leading-7 tracking-tight whitespace-nowrap max-w-full"
      role="contentinfo"
    >
      ©Blue Light Card 2008 - 2024
    </p>
    <div
      className="grid grid-cols-2 justify-items-center w-full text-center md:grid-cols-none md:grid-rows-none md:flex md:flex-row md:justify-center lg:justify-end  md:gap-4"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.co.uk/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.co.uk/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Legal and Regulatory footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.co.uk/legal-and-regulatory.php"
        id="Legal and Regulatory-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Legal and Regulatory
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light w-full md:w-auto leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.co.uk/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
      <a
        aria-label="Candidate Privacy Notice footer link"
        className="mt-4 text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark text-base font-typography-body-light font-typography-body-light-weight tracking-typography-body-light leading-typography-body-light col-span-2 justify-self-center md:col-span-1 leading-[1px] lg:leading-normal last:pb-1 sm:last:pb-0"
        href="https://www.bluelightcard.co.uk/candidate-privacy-notice.php"
        id="Candidate Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Candidate Privacy Notice
      </a>
    </div>
  </div>
</div>
`;
